--- a/frontend/src/styles/CreateListing.css
+++ b/frontend/src/styles/CreateListing.css
@@ -31,10 +31,24 @@ hr {
   margin: 0 auto;
 }
 
-.inpbadge {
+.container_more_minus {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.inpbadge {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+}
+
+.btngp {
+  display: flex;
+  justify-content: center;
 }
 
 .iconcard {
@@ -59,9 +73,10 @@ hr {
 }
 
 .centero {
-  width: auto;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
 }
 h4 {
   color: rgb(91, 89, 89);
@@ -148,24 +163,6 @@ h4 {
 .center {
   margin: 0 auto;
 }
-
-/* @media (min-width: 1024px) {
-  #card {
-    width: 990px;
-  }
-}
-
-@media (max-width: 768px) {
-  #card {
-    width: 650px;
-  }
-}
-
-@media (max-width: 533px) {
-  #card {
-    width: 500px;
-  }
-} */
 
 /* Pantallas anchas (monitores grandes) */
 @media (min-width: 1200px) {
