--- a/frontend/src/styles/ResultCard.css
+++ b/frontend/src/styles/ResultCard.css
@@ -2,14 +2,14 @@
   h3 {
     color: black;
     font-style: normal;
-    font-weight: 200;
+    font-weight: 400;
   }
 
   p {
     color: black;
     font-style: normal;
     font-weight: 400;
-    font-size: small;
+    font-size: smaller;
   }
 }
 
@@ -23,23 +23,22 @@
 .resultcard {
   width: 90%;
   height: 100%;
+  min-height: fit-content;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.405);
   &:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.405);
     cursor: pointer;
-    border-radius: 10px;
   }
 }
-
+.vivp {
+  display: flex;
+  width: 80%;
+  flex-direction: row;
+  align-items: center;
+  gap: 25px;
+}
 .card-container {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   padding: 20px;
-}
-
-.resultcard {
-  flex: 1 1 300px;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
 }
